# flower-federated-learning

./: .gitignore  README.md  pyproject.toml
my_federated_project/: __init__.py  client_app.py  server_app.py  strategy.py  task.py
